--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch A Sketch</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -22,7 +22,8 @@
             <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
             <output id="output"></output>
         </div>
+        <!-- <div id="response">Response: </div> -->
     </div> 
-    <div><p id="credit">Made by: Manzoii</p></div>
+    <div><p id="credit">Made by: MANZO for The Odin Project curriculum</p></div>
 </body>
 </html>
